--- a/themes/next/source/css/_common/components/post/post-eof.styl
+++ b/themes/next/source/css/_common/components/post/post-eof.styl
@@ -14,3 +14,21 @@
     display: none;
   }
 }
+
+// Custom styles.
+code {
+    color: #ff7600;
+    background: #fbf7f8;
+    margin: 2px;
+}
+// 边框的自定义样式
+.highlight, pre {
+    margin: 5px 0;
+    padding: 5px;
+    border-radius: 3px;
+}
+.highlight, code, pre {
+    border: 1px solid #d6d6d6;
+}
+
+
