fix:修改代码块的背景

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -8,11 +8,10 @@
     -moz-box-shadow: 0 0 5px rgba(202, 203, 204, .5);
 }
 body{
-    background: url(/images/background.png);
+    background: url(https://ws3.sinaimg.cn/large/006tNc79ly1fqgzeojx58j31hc0m8769.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
 }
-
 
