add:加入参考和感谢，增加主题阅读宽度

--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -191,10 +191,12 @@ $pagination-active-border       = $grey-light
 // Layout sizes
 // --------------------------------------------------
 
-$main-desktop                   = 960px
+//$main-desktop                   = 960px
+$main-desktop                   = 1060px
 $main-desktop-large             = 1200px
 
-$content-desktop                = 700px
+//$content-desktop                = 700px
+$content-desktop                = 800px
 $content-desktop-large          = 900px
 
 $content-desktop-padding        = 40px
