fix:增加屏幕宽度

--- a/themes/next/source/css/_common/components/post/post-expand.styl
+++ b/themes/next/source/css/_common/components/post/post-expand.styl
@@ -4,7 +4,8 @@
   padding-top: 40px;
 }
 
-@media (max-width: 767px) {
+//@media (max-width: 767px) {
+@media (max-width: 1060px) {
   .posts-expand {
     margin: 0 20px;
   }
